--- a/blender_docs/locale/vi/LC_MESSAGES/editors/vse/sequencer/strips/effects/cross.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/vse/sequencer/strips/effects/cross.po
@@ -1,24 +1,24 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) : This page is licensed under a CC-BY-SA 4.0 Int. License
-# This file is distributed under the same license as the Blender 2.79 Manual
-# package.
-# Hoang Duy Tran <hoangduytran1960@gmail.com>, 2018.
+# Translations template for PROJECT.
+# Copyright (C) 2019 ORGANIZATION
+# This file is distributed under the same license as the PROJECT project.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2019.
 #
 #, fuzzy
+msgid ""
 msgstr ""
-"Project-Id-Version: Blender 2.79 Manual 2.79\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-11-01 19:20+0000\n"
-"PO-Revision-Date: 2018-12-10 21:58+0000\n"
-"Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
-"Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
-"Language: vi\n"
+"Project-Id-Version: PROJECT VERSION\n"
+"Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
+"POT-Creation-Date: 2019-01-17 21:30+0000\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.6.0\n"
 
 #: ../../manual/editors/vse/sequencer/strips/effects/cross.rst:6
+#, fuzzy
 msgid "Cross & Gamma Cross"
 msgstr "-- Cross & Gamma Cross"
 
@@ -48,7 +48,7 @@ msgid "Default Fade"
 msgstr "-- Default Fade"
 
 #: ../../manual/editors/vse/sequencer/strips/effects/cross.rst:23
-msgid "Automatically calculates a linear fade over the length of the stip."
+msgid "Automatically calculates a linear fade over the length of the strip."
 msgstr ""
 
 #: ../../<generated>:1
@@ -61,3 +61,7 @@ msgid ""
 "custom fade. This can be used with different :ref:`easings <editors-"
 "graph-fcurves-settings-easing>` to fine-tune the fade in/out."
 msgstr ""
+
+#~ msgid "Automatically calculates a linear fade over the length of the stip."
+#~ msgstr ""
+
