--- a/blender_docs/locale/vi/LC_MESSAGES/editors/vse/sequencer/properties/modifiers.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/vse/sequencer/properties/modifiers.po
@@ -21,7 +21,7 @@ msgstr ""
 
 #: ../../manual/editors/vse/sequencer/properties/modifiers.rst:10
 msgid "Modifiers Panel"
-msgstr "-- Modifiers Panel"
+msgstr "Bảng Bộ Điều Chỉnh -- Modifiers Panel"
 
 #: ../../manual/editors/vse/sequencer/properties/modifiers.rst:12
 msgid "Reference"
@@ -105,7 +105,7 @@ msgstr ""
 
 #: ../../manual/editors/vse/sequencer/properties/modifiers.rst:48
 msgid "Input Mask Type"
-msgstr "-- Input Mask Type"
+msgstr "Thể Loại Màn Chắn Cung Cấp -- Input Mask Type"
 
 #: ../../manual/editors/vse/sequencer/properties/modifiers.rst:51
 msgid "Strip"
