--- a/blender_docs/locale/vi/LC_MESSAGES/editors/vse/sequencer/properties/proxy_timecode.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/vse/sequencer/properties/proxy_timecode.po
@@ -20,7 +20,7 @@ msgstr ""
 
 #: ../../manual/editors/vse/sequencer/properties/proxy_timecode.rst:4
 msgid "Proxy/Timecode Panel"
-msgstr "-- Proxy/Timecode Panel"
+msgstr "Bảng Đại Diện/Mã Thời Gian -- Proxy/Timecode Panel"
 
 #: ../../manual/editors/vse/sequencer/properties/proxy_timecode.rst:6
 msgid "Reference"
@@ -101,7 +101,7 @@ msgstr ""
 
 #: ../../manual/editors/vse/sequencer/properties/proxy_timecode.rst:49
 msgid "Project"
-msgstr "Phóng Chiếu -- Project"
+msgstr "Đề Án -- Project"
 
 #: ../../manual/editors/vse/sequencer/properties/proxy_timecode.rst:46
 msgid "All proxies are stored in one directory."
