--- a/blender_docs/locale/vi/LC_MESSAGES/editors/vse/sequencer/strips/effects/add.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/vse/sequencer/strips/effects/add.po
@@ -22,7 +22,7 @@ msgstr ""
 
 #: ../../manual/editors/vse/sequencer/strips/effects/add.rst:5
 msgid "Add Effect"
-msgstr "-- Add Effect"
+msgstr "Thêm Hiệu Ứng -- Add Effect"
 
 #: ../../manual/editors/vse/sequencer/strips/effects/add.rst:7
 msgid ""
