--- a/blender_docs/locale/vi/LC_MESSAGES/editors/vse/sequencer/strips/effects/alpha_over_under_overdrop.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/vse/sequencer/strips/effects/alpha_over_under_overdrop.po
@@ -22,7 +22,7 @@ msgstr ""
 
 #: ../../manual/editors/vse/sequencer/strips/effects/alpha_over_under_overdrop.rst:4
 msgid "Alpha Over, Under & Over Drop"
-msgstr "-- Alpha Over, Under & Over Drop"
+msgstr "Alpha Chồng Lên, Thả Trên & Dưới -- Alpha Over, Under & Over Drop"
 
 #: ../../manual/editors/vse/sequencer/strips/effects/alpha_over_under_overdrop.rst:6
 msgid ""
