--- a/blender_docs/locale/vi/LC_MESSAGES/editors/vse/sequencer/strips/effects/cross.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/vse/sequencer/strips/effects/cross.po
@@ -18,20 +18,19 @@ msgstr ""
 "Generated-By: Babel 2.6.0\n"
 
 #: ../../manual/editors/vse/sequencer/strips/effects/cross.rst:6
-#, fuzzy
 msgid "Cross & Gamma Cross"
-msgstr "-- Cross & Gamma Cross"
+msgstr "Hòa Trộn & Hòa Trộn Gamma -- Cross & Gamma Cross"
 
 #: ../../manual/editors/vse/sequencer/strips/effects/cross.rst:10
 msgid "Cross Effect."
-msgstr ""
+msgstr "Hiệu Ứng Hòa Trộn"
 
 #: ../../manual/editors/vse/sequencer/strips/effects/cross.rst:12
 msgid ""
 "This effect fades from one strip to another, based on how many frames the"
 " two strips overlap. This is a very useful strip that blends the whole "
 "image from one to the other."
-msgstr ""
+msgstr "Hiệu ứng này làm mờ dần dải nọ sang dải kia, dựa trên số lượng khung hình đè gối giữa hai dải. Dải này rất có lợi trong việc hòa trộn toàn bộ hình ảnh từ cái nọ sang cái kia."
 
 #: ../../manual/editors/vse/sequencer/strips/effects/cross.rst:15
 msgid ""
@@ -45,7 +44,7 @@ msgstr "Tùy Chọn -- Options"
 
 #: ../../<generated>:1
 msgid "Default Fade"
-msgstr "-- Default Fade"
+msgstr "Mờ Dần Mặc Định -- Default Fade"
 
 #: ../../manual/editors/vse/sequencer/strips/effects/cross.rst:23
 msgid "Automatically calculates a linear fade over the length of the strip."
@@ -53,7 +52,7 @@ msgstr ""
 
 #: ../../<generated>:1
 msgid "Effect Fader"
-msgstr "Trình Làm Phai Mờ Hiệu Ứng -- Effect Fader"
+msgstr "Bộ Mờ Dần Hiệu Ứng -- Effect Fader"
 
 #: ../../manual/editors/vse/sequencer/strips/effects/cross.rst:26
 msgid ""
