--- a/blender_docs/locale/vi/LC_MESSAGES/editors/vse/sequencer/strips/effects/glow.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/vse/sequencer/strips/effects/glow.po
@@ -83,7 +83,7 @@ msgstr ""
 
 #: ../../manual/editors/vse/sequencer/strips/effects/glow.rst:33
 msgid "Only boost"
-msgstr "-- Only boost"
+msgstr "Duy Gia Tăng -- Only boost"
 
 #: ../../manual/editors/vse/sequencer/strips/effects/glow.rst:31
 msgid ""
