--- a/blender_docs/locale/vi/LC_MESSAGES/editors/vse/sequencer/strips/effects/subtract.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/vse/sequencer/strips/effects/subtract.po
@@ -20,11 +20,11 @@ msgstr ""
 
 #: ../../manual/editors/vse/sequencer/strips/effects/subtract.rst:5
 msgid "Subtract Effect"
-msgstr "-- Subtract Effect"
+msgstr "Hiệu Ứng Trừ -- Subtract Effect"
 
 #: ../../manual/editors/vse/sequencer/strips/effects/subtract.rst:9
 msgid "Subtract Effect."
-msgstr ""
+msgstr "Hiệu Ứng Trừ."
 
 #: ../../manual/editors/vse/sequencer/strips/effects/subtract.rst:11
 msgid "This effect takes away one strip's color from the second."
