--- a/blender_docs/locale/vi/LC_MESSAGES/editors/vse/sequencer/strips/effects/wipe.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/vse/sequencer/strips/effects/wipe.po
@@ -116,7 +116,7 @@ msgstr ""
 
 #: ../../<generated>:1
 msgid "Default Fade"
-msgstr "-- Default Fade"
+msgstr "Mờ Dần Mặc Định -- Default Fade"
 
 #: ../../manual/editors/vse/sequencer/strips/effects/wipe.rst:46
 msgid "Automatically calculates a linear fade over the length of the strip."
@@ -124,7 +124,7 @@ msgstr ""
 
 #: ../../<generated>:1
 msgid "Effect Fader"
-msgstr "Trình Làm Phai Mờ Hiệu Ứng -- Effect Fader"
+msgstr "Trình Làm Mờ Dần Hiệu Ứng -- Effect Fader"
 
 #: ../../manual/editors/vse/sequencer/strips/effects/wipe.rst:49
 msgid ""
