--- a/blender_docs/locale/vi/LC_MESSAGES/editors/vse/sequencer/strips/movie_image.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/vse/sequencer/strips/movie_image.po
@@ -20,7 +20,7 @@ msgstr ""
 
 #: ../../manual/editors/vse/sequencer/strips/movie_image.rst:4
 msgid "Movie & Image Strips"
-msgstr "-- Movie & Image Strips"
+msgstr "Dải Phim & Hình Ảnh -- Movie & Image Strips"
 
 #: ../../manual/editors/vse/sequencer/strips/movie_image.rst:9
 msgid "Movie"
@@ -82,7 +82,7 @@ msgstr ""
 
 #: ../../manual/editors/vse/sequencer/strips/movie_image.rst:43
 msgid "Batch"
-msgstr "-- Batch"
+msgstr "Hàng Loạt -- Batch"
 
 #: ../../manual/editors/vse/sequencer/strips/movie_image.rst:43
 msgid ""
@@ -121,7 +121,7 @@ msgstr "Thêm Dải về Hình Ảnh -- Add Image Strip"
 
 #: ../../manual/editors/vse/sequencer/strips/movie_image.rst:62
 msgid "Placeholder Images"
-msgstr "-- Placeholder Images"
+msgstr "Hình Ảnh Giữ Chỗ -- Placeholder Images"
 
 #: ../../manual/editors/vse/sequencer/strips/movie_image.rst:64
 msgid ""
