--- a/blender_docs/locale/vi/LC_MESSAGES/editors/vse/sequencer/strips/sound.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/vse/sequencer/strips/sound.po
@@ -104,7 +104,7 @@ msgstr ""
 
 #: ../../manual/editors/vse/sequencer/strips/sound.rst:44
 msgid "Trim Duration"
-msgstr "-- Trim Duration"
+msgstr "Cắt Độ Dài -- Trim Duration"
 
 #: ../../manual/editors/vse/sequencer/strips/sound.rst:43
 msgid "Offset the start and end of a sound strip."
@@ -112,7 +112,7 @@ msgstr ""
 
 #: ../../manual/editors/vse/sequencer/strips/sound.rst:47
 msgid "Working with Audio Tracks"
-msgstr "-- Working with Audio Tracks"
+msgstr "Làm Việc với Rãnh Âm Thanh -- Working with Audio Tracks"
 
 #: ../../manual/editors/vse/sequencer/strips/sound.rst:49
 msgid ""
@@ -144,7 +144,7 @@ msgstr ""
 
 #: ../../manual/editors/vse/sequencer/strips/sound.rst:68
 msgid "Animating Audio Track Properties"
-msgstr "-- Animating Audio Track Properties"
+msgstr "Hoạt Hình các Tính Chất của Rãnh Âm Thanh -- Animating Audio Track Properties"
 
 #: ../../manual/editors/vse/sequencer/strips/sound.rst:70
 msgid ""
@@ -178,7 +178,7 @@ msgstr "Những Hạn Chế Từng Biết Đến -- Known Limitations"
 
 #: ../../manual/editors/vse/sequencer/strips/sound.rst:93
 msgid "Hiss, Crackle and Pop"
-msgstr "-- Hiss, Crackle and Pop"
+msgstr "Tiếng huýt gió, tiếng tanh tách, tiếng nổ lốp bốp  -- Hiss, Crackle and Pop"
 
 #: ../../manual/editors/vse/sequencer/strips/sound.rst:98
 msgid ""
