--- a/blender_docs/locale/vi/LC_MESSAGES/editors/vse/sequencer/properties/edit_strip.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/vse/sequencer/properties/edit_strip.po
@@ -20,7 +20,7 @@ msgstr ""
 
 #: ../../manual/editors/vse/sequencer/properties/edit_strip.rst:4
 msgid "Edit Strip Panel"
-msgstr "-- Edit Strip Panel"
+msgstr "Bảng Biên Soạn Dải -- Edit Strip Panel"
 
 #: ../../manual/editors/vse/sequencer/properties/edit_strip.rst:6
 msgid "Reference"
@@ -84,7 +84,7 @@ msgstr ""
 
 #: ../../manual/editors/vse/sequencer/properties/edit_strip.rst:27
 msgid "Mute (eye/speaker icon)"
-msgstr "-- Mute (eye/speaker icon)"
+msgstr "Giải Hoạt (biểu tượng con mắt/loa)-- Mute (eye/speaker icon)"
 
 #: ../../manual/editors/vse/sequencer/properties/edit_strip.rst:27
 msgid ""
@@ -110,7 +110,7 @@ msgstr ""
 
 #: ../../manual/editors/vse/sequencer/properties/edit_strip.rst:35
 msgid "Start Frame"
-msgstr "K. Đầu -- Start Frame"
+msgstr "Khung Hình Đầu -- Start Frame"
 
 #: ../../manual/editors/vse/sequencer/properties/edit_strip.rst:36
 msgid ""
