--- a/blender_docs/locale/vi/LC_MESSAGES/editors/vse/sequencer/properties/filter.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/vse/sequencer/properties/filter.po
@@ -20,7 +20,7 @@ msgstr ""
 
 #: ../../manual/editors/vse/sequencer/properties/filter.rst:5
 msgid "Filter Panel"
-msgstr "-- Filter Panel"
+msgstr "Bảng Bộ Lọc -- Filter Panel"
 
 #: ../../manual/editors/vse/sequencer/properties/filter.rst:7
 msgid "Reference"
@@ -40,7 +40,7 @@ msgstr ""
 
 #: ../../manual/editors/vse/sequencer/properties/filter.rst:19
 msgid "Video"
-msgstr "-- Video"
+msgstr "Phim Video -- Video"
 
 #: ../../manual/editors/vse/sequencer/properties/filter.rst:25
 msgid "Strobe"
@@ -90,7 +90,7 @@ msgstr ""
 
 #: ../../manual/editors/vse/sequencer/properties/filter.rst:40
 msgid "Color"
-msgstr "Màu -- Color"
+msgstr "Màu Sắc -- Color"
 
 #: ../../manual/editors/vse/sequencer/properties/filter.rst:42
 msgid "Saturation"
