--- a/blender_docs/locale/vi/LC_MESSAGES/editors/vse/sequencer/selecting.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/vse/sequencer/selecting.po
@@ -53,7 +53,7 @@ msgstr ""
 
 #: ../../manual/editors/vse/sequencer/selecting.rst:15
 msgid "Select Linked Time :kbd:`Ctrl-RMB`"
-msgstr "-- Select Linked Time :kbd:`Ctrl-RMB`"
+msgstr "Chọn Thời Gian Tương Đồng -- Select Linked Time :kbd:`Ctrl-RMB`"
 
 #: ../../manual/editors/vse/sequencer/selecting.rst:16
 msgid ""
@@ -63,7 +63,7 @@ msgstr ""
 
 #: ../../manual/editors/vse/sequencer/selecting.rst:23
 msgid "Select Surrounding Handles :kbd:`Alt-RMB`"
-msgstr "-- Select Surrounding Handles :kbd:`Alt-RMB`"
+msgstr "Chọn Các Tay Cầm Chung Quanh -- Select Surrounding Handles :kbd:`Alt-RMB`"
 
 #: ../../manual/editors/vse/sequencer/selecting.rst:18
 msgid ""
@@ -79,7 +79,7 @@ msgstr ""
 
 #: ../../manual/editors/vse/sequencer/selecting.rst:31
 msgid "Select Both Handles :kbd:`Alt-RMB`"
-msgstr "-- Select Both Handles :kbd:`Alt-RMB`"
+msgstr "Chọn Cả Hai Tay Cầm -- Select Both Handles :kbd:`Alt-RMB`"
 
 #: ../../manual/editors/vse/sequencer/selecting.rst:26
 msgid ""
@@ -101,7 +101,7 @@ msgstr ""
 
 #: ../../manual/editors/vse/sequencer/selecting.rst:52
 msgid "Select Grouped :kbd:`Shift-G`"
-msgstr "Chọn theo Nhóm -- Select Grouped :kbd:`Shift-G`"
+msgstr "Chọn cái Được Nhóm Lại -- Select Grouped :kbd:`Shift-G`"
 
 #: ../../manual/editors/vse/sequencer/selecting.rst:36
 msgid "Selects strips according to their relation with other strips."
@@ -173,7 +173,7 @@ msgstr "Chọn Toàn Bộ :kbd:`A` -- Select All :kbd:`A`"
 
 #: ../../manual/editors/vse/sequencer/selecting.rst:55
 msgid "Selects all the strips loaded."
-msgstr ""
+msgstr "Chọn toàn bộ các dải đã nạp."
 
 #: ../../manual/editors/vse/sequencer/selecting.rst:56
 msgid "Select Inverse :kbd:`Ctrl-I`"
@@ -181,7 +181,7 @@ msgstr "Chọn Đảo Nghịch :kbd:`Ctrl-I` -- Select Inverse :kbd:`Ctrl-I`"
 
 #: ../../manual/editors/vse/sequencer/selecting.rst:57
 msgid "Inverts the current selection."
-msgstr ""
+msgstr "Đảo nghịch lựa chọn hiện tại."
 
 #: ../../<generated>:1
 msgid "Border Select :kbd:`B`"
