--- a/blender_docs/locale/vi/LC_MESSAGES/editors/vse/sequencer/strips/clip_mask.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/vse/sequencer/strips/clip_mask.po
@@ -20,11 +20,11 @@ msgstr ""
 
 #: ../../manual/editors/vse/sequencer/strips/clip_mask.rst:4
 msgid "Clip & Mask Strip"
-msgstr "-- Clip & Mask Strip"
+msgstr "Dải Màn Chắn & Đoạn Phim -- Clip & Mask Strip"
 
 #: ../../manual/editors/vse/sequencer/strips/clip_mask.rst:9
 msgid "Clip"
-msgstr "Cắt/Xén -- Clip"
+msgstr "Đoạn Phim -- Clip"
 
 #: ../../manual/editors/vse/sequencer/strips/clip_mask.rst:11
 msgid ""
