--- a/blender_docs/locale/vi/LC_MESSAGES/editors/vse/sequencer/strips/effects/multicam.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/vse/sequencer/strips/effects/multicam.po
@@ -6,21 +6,6 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PROJECT VERSION\n"
-"Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2019-01-17 21:30+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.6.0\n"
-
-#: ../../manual/editors/vse/sequencer/strips/effects/multicam.rst:5
-#, fuzzy
-msgid "Multicam Selector"
-msgstr ""
 "Project-Id-Version: Blender 2.79 Manual 2.79\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-01 19:20+0000\n"
@@ -32,6 +17,10 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.6.0\n"
+
+#: ../../manual/editors/vse/sequencer/strips/effects/multicam.rst:5
+msgid "Multicam Selector"
+msgstr "Bộ Lựa Chọn Đa Máy Quay"
 
 #: ../../manual/editors/vse/sequencer/strips/effects/multicam.rst:7
 msgid ""
@@ -56,7 +45,7 @@ msgstr ""
 
 #: ../../manual/editors/vse/sequencer/strips/effects/multicam.rst:21
 msgid "Cut To"
-msgstr "-- Cut To"
+msgstr "Cắt Tới -- Cut To"
 
 #: ../../manual/editors/vse/sequencer/strips/effects/multicam.rst:19
 msgid ""
