--- a/blender_docs/locale/vi/LC_MESSAGES/editors/vse/sequencer/strips/effects/speed_control.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/vse/sequencer/strips/effects/speed_control.po
@@ -6,21 +6,6 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PROJECT VERSION\n"
-"Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2019-01-17 21:30+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.6.0\n"
-
-#: ../../manual/editors/vse/sequencer/strips/effects/speed_control.rst:5
-#, fuzzy
-msgid "Speed Control"
-msgstr ""
 "Project-Id-Version: Blender 2.79 Manual 2.79\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-01 19:20+0000\n"
@@ -32,6 +17,10 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.6.0\n"
+
+#: ../../manual/editors/vse/sequencer/strips/effects/speed_control.rst:5
+msgid "Speed Control"
+msgstr "Điều Chỉnh Tốc Độ"
 
 #: ../../manual/editors/vse/sequencer/strips/effects/speed_control.rst:7
 msgid ""
@@ -51,7 +40,7 @@ msgstr "Tùy Chọn -- Options"
 
 #: ../../manual/editors/vse/sequencer/strips/effects/speed_control.rst:20
 msgid "Stretch to Input Strip Length"
-msgstr "-- Stretch to Input Strip Length"
+msgstr "Kéo Giãn cho bằng Chiều Dài của Dải Cung Cấp -- Stretch to Input Strip Length"
 
 #: ../../manual/editors/vse/sequencer/strips/effects/speed_control.rst:20
 msgid ""
@@ -62,7 +51,7 @@ msgstr ""
 
 #: ../../manual/editors/vse/sequencer/strips/effects/speed_control.rst:30
 msgid "Use as Speed"
-msgstr "-- Use as Speed"
+msgstr "Sử Dụng làm Tốc Độ -- Use as Speed"
 
 #: ../../manual/editors/vse/sequencer/strips/effects/speed_control.rst:23
 msgid "Calculates the scale value based on a *Speed Factor*."
@@ -96,7 +85,7 @@ msgstr ""
 
 #: ../../manual/editors/vse/sequencer/strips/effects/speed_control.rst:38
 msgid "Scale to Length"
-msgstr "-- Scale to Length"
+msgstr "Tỷ Lệ Hóa thành Chiều Dài -- Scale to Length"
 
 #: ../../manual/editors/vse/sequencer/strips/effects/speed_control.rst:38
 msgid ""
@@ -118,7 +107,7 @@ msgstr "Các Ví Dụ -- Examples"
 
 #: ../../manual/editors/vse/sequencer/strips/effects/speed_control.rst:48
 msgid "Creating a Slow-Motion Effect"
-msgstr "-- Creating a Slow-Motion Effect"
+msgstr "Tạo Hiệu Ứng Quay Chậm -- Creating a Slow-Motion Effect"
 
 #: ../../manual/editors/vse/sequencer/strips/effects/speed_control.rst:53
 msgid "50% Slow motion using Speed Control."
@@ -154,7 +143,7 @@ msgstr ""
 
 #: ../../manual/editors/vse/sequencer/strips/effects/speed_control.rst:75
 msgid "Keyframing the Speed Control"
-msgstr "-- Keyframing the Speed Control"
+msgstr "Khung Khóa Hóa sự Điều Chỉnh Tốc Độ -- Keyframing the Speed Control"
 
 #: ../../manual/editors/vse/sequencer/strips/effects/speed_control.rst:80
 msgid "Keyframing the Frame number."
@@ -186,7 +175,7 @@ msgstr ""
 
 #: ../../manual/editors/vse/sequencer/strips/effects/speed_control.rst:99
 msgid "Changing Video Frame Rates"
-msgstr "-- Changing Video Frame Rates"
+msgstr "Đổi Tần Số Khung Hình của Phim -- Changing Video Frame Rates"
 
 #: ../../manual/editors/vse/sequencer/strips/effects/speed_control.rst:101
 msgid ""
