--- a/blender_docs/locale/vi/LC_MESSAGES/editors/vse/sequencer/strips/effects/text.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/vse/sequencer/strips/effects/text.po
@@ -20,7 +20,7 @@ msgstr ""
 
 #: ../../manual/editors/vse/sequencer/strips/effects/text.rst:5
 msgid "Text Effect"
-msgstr "-- Text Effect"
+msgstr "Hiệu Ứng Văn Bản -- Text Effect"
 
 #: ../../manual/editors/vse/sequencer/strips/effects/text.rst:7
 msgid ""
@@ -71,7 +71,7 @@ msgstr ""
 
 #: ../../manual/editors/vse/sequencer/strips/effects/text.rst:26
 msgid "Align X, Y"
-msgstr "-- Align X, Y"
+msgstr "Canh Hàng X, Y -- Align X, Y"
 
 #: ../../manual/editors/vse/sequencer/strips/effects/text.rst:27
 msgid ""
@@ -81,7 +81,7 @@ msgstr ""
 
 #: ../../manual/editors/vse/sequencer/strips/effects/text.rst:28
 msgid "Location X, Y"
-msgstr "-- Location X, Y"
+msgstr "Vị Trí X, Y -- Location X, Y"
 
 #: ../../manual/editors/vse/sequencer/strips/effects/text.rst:29
 msgid "Positions the text on the X, Y axis."
